apply new ui style to the reader interface

--- a/apps/static/css/_components/uk-switch.scss
+++ b/apps/static/css/_components/uk-switch.scss
@@ -43,7 +43,7 @@
 
 /* Slider active color */
 input:checked+.uk-switch-slider {
-    background-color: $rx-color-accent-1 !important;
+    background-color: #1D3557 !important;
 }
 
 /* Pointer active animation */
