--- a/apps/static/css/readux2/search.scss
+++ b/apps/static/css/readux2/search.scss
@@ -127,9 +127,9 @@ form#search-form input[type="search"][name="q"] {
   width: 100%;
 }
 
-.uk-button-default {
-  font-size: 1.25rem;
-}
+// .uk-button-default {
+//   font-size: 1.25rem;
+// }
 
 #search-grid {
   gap: 1.5rem;
