remove uk-button-default style in collection.scss

--- a/apps/static/css/readux2/collection.scss
+++ b/apps/static/css/readux2/collection.scss
@@ -38,11 +38,12 @@
     justify-content: center;
     transition: background-color 0.3s ease;
 }
-.uk-button-default {
-    background-color: #222; /* Removed gradient background */
-    border: none;
-    color: white;
-}
+
+// .uk-button-default {
+//     background-color: #222; /* Removed gradient background */
+//     border: none;
+//     color: white;
+// }
 
 .modal-bg {
     background-size: cover;
