--- a/apps/templates/search_results.html
+++ b/apps/templates/search_results.html
@@ -146,7 +146,7 @@
             {% endfor %}
 
             <fieldset uk-margin class="uk-align-center uk-text-center">
-                <button id="reset-filters" type="button" class="uk-button uk-button-small">Reset</button>
+                <button id="reset-filters" type="button" class="uk-button uk-button-default uk-button-small">Reset</button>
                 <button class="uk-button uk-button-primary uk-button-small" type="submit">Apply</button>
             </fieldset>
         </div>
