Use site name in title bar

--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}Readux{% endblock title %}</title>
+    <title>{% block title %}{{ request.site.name }}{% endblock title %}</title>
     <meta property="og:site" content="Readux 2 - Read, Annotate, Publish" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
