--- a/apps/templates/_home/_featured_volumes.html
+++ b/apps/templates/_home/_featured_volumes.html
@@ -13,13 +13,15 @@
                 <div class="uk-slider-container uk-light">
                     <div class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m">
                         {% for volume in page.featured_volumes.all|order_by:page.featured_volumes_sort_order %}
-                            <div class="uk-panel">
-                                <a href="{% url 'volumeall' volume.pid %}" class="grid-item">
-                                    <img src="{{ volume.start_canvas.thumbnail_crop_tallwide }}" alt="{{ volume.label }}">
-                                    <h2>{{ volume.label }}</h2>
-                                </a>
-                                <div class="color-black">{{ volume.published_date }}</div>
-                            </div>
+                            {% if volume.pid %}
+                                <div class="uk-panel">
+                                    <a href="{% url 'volumeall' volume.pid %}" class="grid-item">
+                                        <img src="{{ volume.start_canvas.thumbnail_crop_tallwide }}" alt="{{ volume.label }}">
+                                        <h2>{{ volume.label }}</h2>
+                                    </a>
+                                    <div class="color-black">{{ volume.published_date }}</div>
+                                </div>
+                            {% endif %}
                         {% endfor %}
                     </div>
                 </div>
