--- a/apps/templates/_page/_navbar.html
+++ b/apps/templates/_page/_navbar.html
@@ -14,24 +14,26 @@
       <!-- End -->
 
       <!-- Breadcrumb -->
-      <ul class="breadcrumb">
-        <li>
-          <a href="#">Collections<span class="icon-chevron-down" uk-icon="icon: chevron-down; ratio: 0.5"></span></a>
-          <div class="uk-navbar-dropdown uk-padding-remove" uk-dropdown="mode: click; pos: bottom-left;">
-            <ul class="uk-nav uk-navbar-dropdown-nav">
-              {% if volume.collections.first.pid %}
-                <li><a href="/{{ collectionlink.slug }}" alt="Collections">Collections</a></li>
-                <li><a href="{% url 'collection' volume.collections.first.pid %}"
-                    alt="Collections">{{ volume.collections.first.label }}</a>
-                </li>
-              {% else %}
-                <li><a href="/{{ volumelink.slug }}">All Volumes</a></li>
-              {% endif %}
-            </ul>
-          </div>
-        </li>
-        <li>{{volume.label}}</li>
-      </ul>
+      {% if volume.collections.first.pid or volumelink %}
+        <ul class="breadcrumb">
+          <li>
+            <a href="#">Collections<span class="icon-chevron-down" uk-icon="icon: chevron-down; ratio: 0.5"></span></a>
+            <div class="uk-navbar-dropdown uk-padding-remove" uk-dropdown="mode: click; pos: bottom-left;">
+              <ul class="uk-nav uk-navbar-dropdown-nav">
+                {% if volume.collections.first.pid %}
+                  <li><a href="/{{ collectionlink.slug }}" alt="Collections">Collections</a></li>
+                  <li><a href="{% url 'collection' volume.collections.first.pid %}"
+                      alt="Collections">{{ volume.collections.first.label }}</a>
+                  </li>
+                {% else %}
+                  <li><a href="/{{ volumelink.slug }}">All Volumes</a></li>
+                {% endif %}
+              </ul>
+            </div>
+          </li>
+          <li>{{volume.label}}</li>
+        </ul>
+      {% endif %}
       <!-- End -->
     </div>
 
