Don't show layers button on all page view.

--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -164,7 +164,8 @@ window.onload = function() {
         id: 'action-layers',
         tooltipContent: 'Layers',
         onClick: () => UIkit.modal('#modal-layers').show(),
-        icon: "<span uk-icon='icon: album'></span>"
+        icon: "<span uk-icon='icon: album'></span>",
+        hideOnAll: true
       }
     ]
   };
