--- a/apps/templates/account/base.html
+++ b/apps/templates/account/base.html
@@ -2,5 +2,6 @@
 {% block title %}{% block head_title %}{% endblock head_title %}{% endblock title %}
 
 {% block content %}
+{% include '_page/_navbar.html' %}
     {% block inner %}{% endblock %}
 {% endblock %}
