--- a/apps/templates/_home/_nav.html
+++ b/apps/templates/_home/_nav.html
@@ -16,7 +16,7 @@
                 <ul class="uk-navbar-nav">
                     <!-- Login/Sign up with Icon -->
                     <li class="">
-                        <a href="#" class="menu-item" uk-icon="icon: sign-in;" uk-toggle="target: #login-modal" uk-tooltip="Login/Sign up"></a>
+                        <a href="/accounts/login" class="menu-item" uk-icon="icon: sign-in;" uk-tooltip="Login/Sign up"><span class="sr-only">Login/Sign Up</span></a>
                     </li>
                     <!-- Partner with Us with Icon -->
                     <li class="">
@@ -32,7 +32,7 @@
     </div>
 </nav>
 
-{% include '_home/_login_modal.html' %}
+
 
 <!-- <script>
     document.getElementById('reset-btn').addEventListener('click', function() {
