--- a/apps/templates/_page/_navbar.html
+++ b/apps/templates/_page/_navbar.html
@@ -50,12 +50,12 @@
           </li>
           <!-- Sign out with Icon -->
           <li>{# URL provided by django-allauth/account/urls.py #}
-            <a href="/accounts/login" class="menu-item" uk-icon="icon: sign-in;" uk-tooltip="Login/Sign up"><span class="sr-only">Login/Sign Up</span></a>
+            <a href="/accounts/logout" class="menu-item" uk-icon="icon: sign-in;" uk-tooltip="Sign Out"><span class="sr-only">Login/Sign Up</span></a>
           </li>
         {% else %}
           <!-- Login/Sign up with Icon -->
           <li>{# URL provided by django-allauth/account/urls.py #}
-            <a href="/accounts/logout" class="menu-item" uk-icon="icon: sign-in;" uk-tooltip="Login/Sign up"><span class="sr-only">Login/Sign Up</span></a>
+            <a href="/accounts/login" class="menu-item" uk-icon="icon: sign-in;" uk-tooltip="Login/Sign up"><span class="sr-only">Sign Out</span></a>
           </li>
         {% endif %}
         <!-- Search with Icon -->
