Update sign in templates

--- a/apps/templates/_home/_footer.html
+++ b/apps/templates/_home/_footer.html
@@ -14,5 +14,13 @@
         <div class="footer-bottom uk-margin-top">
             Engage with digitized print materials on an open source software platform and share new thinking.
         </div>
+        <ul class="uk-list uk-list-collapse uk-text-light uk-text-small uk-margin-small">
+            <li>Readux {{APP_VERSION}}</li>
+            {% if DJANGO_ENV != 'production' %}
+            <li>Branch: {{BRANCH}}</li>
+            <li>Commit: {{COMMIT}}</li>
+            <li>Commit Date: {{COMMIT_DATE}}</li>
+          {% endif %}
+        </ul>
     </div>
 </div>
