--- a/apps/templates/container.html
+++ b/apps/templates/container.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-<div class="uk-container">
-  foo
-  {% block content %}
-  {% endblock %}
-</div>
+{% block nav %}
+{% include '_page/_navbar.html' %}
+{% endblock %}
+{% block content %}
+{% endblock %}
