--- a/apps/templates/users/user_detail.html
+++ b/apps/templates/users/user_detail.html
@@ -1,61 +1,38 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 {% load static %}
 {% load socialaccount %}
 
 {% block title %}User: {{ object.username }}{% endblock %}
 
-{% block content %}
-<div class="rx-head-container uk-margin-remove-bottom">
-  <div class="rx-title-container">
-    <ul class="rx-breadcrumb uk-text-truncate">
-      <li class="rx-breadcrumb-item"><a href="/" alt="Home">Home</a></li>
-      <li class="rx-breadcrumb-item">My Account</li>
-    </ul>
-    <div class="rx-title">
-      {% if object.name %}
-      Hello, {{ object.name }}!
-      {% else %}
-      Hello!
-      {% endif %}
-    </div>
-    <div class="rx-title-tagline">
-      {{ object.username }}
-    </div>
-  </div>
-</div>
-
-{% if object == request.user %}
-<!-- Action buttons -->
+{% block inner %}
 <div class="">
+  {% if request.user is not None %}
   {% if "github" not in request.user.socialaccount_list %}
     {% include "../snippets/github_authorize.html" %}
   {% endif %}
 
   <p class="uk-margin-remove-top">You may update your personal information or E-mail below.</p>
-  <p>{{ page.paragraph }}</p>
-  <a class="btn btn-primary" href="{% url 'users:update' %}" role="button">
-    <div class="rx-btn rx-btn-extension">
-      <i class="fas fa-info-circle" aria-hidden="true"></i>
-      My Profile
-    </div>
-  </a>
-  <a class="btn btn-primary" href="{% url 'account_email' %}" role="button">
-    <div class="rx-btn rx-btn-extension">
-      <i class="fas fa-envelope" aria-hidden="true"></i>
-      My Email
-    </div>
-  </a>
-  <a class="btn btn-primary" href="{% url 'socialaccount_connections' %}" role="button">
-    <div class="rx-btn rx-btn-extension">
-      <i class="" aria-hidden="true"></i>
-      <i class="fas fa-share-alt" aria-hidden="true"></i>
-      Mange Account Connections
-    </div>
-  </a>
+  <ul class="uk-list uk-list-collapse">
+    <li>
+      <a class="uk-block" href="{% url 'users:update' %}" role="button">
+        My Profile
+      </a>
+    </li>
+    <li>
+      <a href="{% url 'account_email' %}" role="button">
+        My Email
+      </a>
+    </li>
+    <li>
+      <a href="{% url 'socialaccount_connections' %}" role="button">
+        Mange Account Connections
+      </a>
+    </li>
+  </ul>
   <!-- Your Stuff: Custom user template urls -->
+   {% endif %}
 </div>
 <!-- End Action buttons -->
-{% endif %}
 
 
-{% endblock content %}
+{% endblock inner %}
